# rhasspy-microphone-pyaudio-hermes

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.in  README.md  __main__.py  configure  configure.ac  mypy.ini  requirements.txt  rhasspy-microphone-pyaudio-hermes.in  rhasspymicrophone_pyaudio_hermes.spec  setup.py
.github/workflows/: tests.yml
debian/DEBIAN/: control
docker/: rhasspy-microphone-pyaudio-hermes
rhasspymicrophone_pyaudio_hermes/: __init__.py  __main__.py
scripts/: build-docker.sh  check-code.sh
